@@ -201,7 +201,14 @@ AC_CHECK_HEADERS([cmath \
 
 
 # Checks for global declarations
-AC_CHECK_DECLS(signgam, , , [#include <cmath>])
+AC_CHECK_DECLS([signgam, isnan],,,
+[#if defined(HAVE_CMATH)
+#  include <cmath>
+#endif
+#if defined(HAVE_IEEEFP_H)
+#  include <ieeefp.h>
+#endif
+])
 
 
 # Checks for functions
@@ -221,16 +228,6 @@ AC_CHECK_FUNCS([asinh \
   log2 \
   rint \
   tgamma])
-
-
-# Check for finite and fpclass on Solaris
-AC_CHECK_FUNC(finite, ,
-  [AC_CHECK_FUNC(isfinite, ,
-    [AC_TRY_LINK([[#include <ieeefp.h>]], [[float f = 0.0; isfinite(f);]],
-      [AC_DEFINE(HAVE_ISFINITE)])])])
-AC_CHECK_FUNC(fpclass, ,
-  [AC_TRY_LINK([[#include <ieeefp.h>]], [[float f = 0.0; fpclass(f);]],
-    [AC_DEFINE(HAVE_FPCLASS)])])
 
 
 # Check for types
@@ -337,19 +334,14 @@ AH_BOTTOM([
 #  define j1(a) _j1(a)
 #endif /* defined(_MSC_VER) */
 
-#if (! defined(HAVE_ISINF) && defined(HAVE_FPCLASS))
+#if (!defined(HAVE_ISINF) && defined(HAVE_FPCLASS))
 #  define HAVE_ISINF 1
 #  define isinf(a) (fpclass(a) == FP_NINF || fpclass(a) == FP_PINF)
 #endif
 
-#if (! defined (HAVE_FINITE) && defined (HAVE_ISFINITE))
+#if (!defined(HAVE_FINITE) && defined(HAVE_ISFINITE))
 #  define HAVE_FINITE 1
 #  define finite(a) isfinite(a)
-#endif
-
-#if (! defined(HAVE_FINITE) && defined(HAVE_ISNAN) && defined(HAVE_ISINF))
-#  define HAVE_FINITE 1
-#  define finite(a) (! isnan(a) && ! isinf(a))
 #endif
 
 #endif /* #ifndef CONFIG_H */
